--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 		<h1 id="title">Suyash's corner on the internet</h1>
 		<div id="links">
 			<p class="link"><a href="https://twitter.com/dextrous93">Twitter</a></p>
+			<p class="link"><a href="https://medium.com/@suyash93">Medium</a></p>
 			<p class="link"><a href="https://in.linkedin.com/in/suyash93">Linkedin</a></p>
 			<p class="link"><a href="https://github.com/suyash">GitHub</a></p>
 		</div>
