--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</style>
 	</head>
 	<body>
-		<h1 id="title">Suyash's corner on the internet</h1>
+		<h1 id="title">Suyash</h1>
 		<div id="links">
 			<p class="link"><a href="https://twitter.com/dextrous93">Twitter</a></p>
 			<p class="link"><a href="https://medium.com/@suyash93">Medium</a></p>
