--- a/index.html
+++ b/index.html
@@ -1,50 +1,21 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width" />
-		<title>Suyash's Website</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" type="text/css" charset="utf-8">
-		<style type="text/css">
-			body {
-				padding: 40px 80px;
-				font-family: Helvetica, 'Helvetica Neue', arial, sans-serif;
-				text-align: center;
-			}
+---
+layout: base
+---
 
-			#links {
-				padding-top: 10px;
-				display: flex;
-				justify-content: center;
-			}
+<h1 id="title">Suyash</h1>
+<div id="links">
+	<p class="link"><a href="https://twitter.com/dextrous93">Twitter</a></p>
+	<p class="link"><a href="https://medium.com/@suyash93">Medium</a></p>
+	<p class="link"><a href="https://in.linkedin.com/in/suyash93">Linkedin</a></p>
+	<p class="link"><a href="https://github.com/suyash">GitHub</a></p>
+</div>
 
-			#title {
-				font-weight: normal;
-			}
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-			.link {
-				padding: 0 10px;
-				font-weight: bold;
-			}
-		</style>
-	</head>
-	<body>
-		<h1 id="title">Suyash</h1>
-		<div id="links">
-			<p class="link"><a href="https://twitter.com/dextrous93">Twitter</a></p>
-			<p class="link"><a href="https://medium.com/@suyash93">Medium</a></p>
-			<p class="link"><a href="https://in.linkedin.com/in/suyash93">Linkedin</a></p>
-			<p class="link"><a href="https://github.com/suyash">GitHub</a></p>
-		</div>
-
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-80985362-1', 'auto');
-			ga('send', 'pageview');
-		</script>
-	</body>
-</html>
+	ga('create', '{{ site.gaid }}', 'auto');
+	ga('send', 'pageview');
+</script>
