--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,21 @@
 
     <link rel="icon" href="favicon.jpg" type="image/jpeg" />
     <link rel="shortcut icon" href="favicon.jpg" type="image/jpeg" />
+
+    <link rel="stylesheet" href="main.scss">
   </head>
   <body>
-    <h1>Suyash</h1>
+    <main>
+      <aside>
+        <h2>Suyash Verma</h2>
+        <p><a href="https://suy.io">Website</a></p>
+        <p><a href="https://github.com/suyash">GitHub</a></p>
+        <p><a href="mailto:hi@suy.io">Email</a></p>
+      </aside>
+      <section>
+        <p class="title"><b>Hi, I'm Suyash</b></p>
+        <p>I'm a Software Engineer in Bangalore, India.</p>
+      </section>
+    </main>
   </body>
 </html>
